add infrastructre for measurements during runtime. add rapl metric.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,17 @@ SET(FIRESTARTER_FILES
 	firestarter/Environment/X86/Payload/SSE2Payload.cpp
 	)
 
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+	SET(FIRESTARTER_FILES 
+		${FIRESTARTER_FILES}
+
+		# measurement stuff
+		firestarter/Measurement/MeasurementWorker.cpp
+		firestarter/Measurement/Summary.cpp
+		firestarter/Measurement/Metric/RAPL.cpp
+		)
+endif()
+
 SET(FIRESTARTER_LINK_LIBRARIES
 	Threads::Threads
 	hwloc
