add option for metric interface dylib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,13 @@ SET(FIRESTARTER_LINK_LIBRARIES
 	AsmJit::AsmJit
 	)
 
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+	SET(FIRESTARTER_LINK_LIBRARIES
+		${FIRESTARTER_LINK_LIBRARIES}
+		-ldl
+		)
+endif()
+
 if(DEFINED BUILD_CUDA)
 	find_package(CUDA REQUIRED)
 
