pull apart booting up firestarter and cli argument parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(FIRESTARTER_FILES
 	firestarter/Main.cpp
+	firestarter/Firestarter.cpp
 	firestarter/LoadWorker.cpp
 	firestarter/WatchdogWorker.cpp
 	firestarter/DumpRegisterWorker.cpp
