add code for NSGA2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,8 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 		# optimization stuff
 		firestarter/Optimizer/Population.cpp
+		firestarter/Optimizer/Util/MultiObjective.cpp
+		firestarter/Optimizer/Algorithm/NSGA2.cpp
 		)
 endif()
 
