--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 		# optimization stuff
 		firestarter/Optimizer/Population.cpp
+		firestarter/Optimizer/OptimizerWorker.cpp
 		firestarter/Optimizer/Util/MultiObjective.cpp
 		firestarter/Optimizer/Algorithm/NSGA2.cpp
 		)
