--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -3,125 +3,132 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-        build-linux:
-                strategy:
-                        fail-fast: false
-                        matrix:
-                                os: [ubuntu-20.04]
-                                compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+  build-linux:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
 
-                                include:
-                                  - os: ubuntu-16.04
-                                    compiler: g++-7
-                                  - os: ubuntu-16.04
-                                    compiler: g++-8
-                                  - os: ubuntu-16.04
-                                    compiler: g++-9
-                                  - os: ubuntu-16.04
-                                    compiler: clang++-8
-                                  - os: ubuntu-16.04
-                                    compiler: clang++-9
-                runs-on: ${{ matrix.os }}
+        include:
+          - os: ubuntu-16.04
+            compiler: g++-7
+          - os: ubuntu-16.04
+            compiler: g++-8
+          - os: ubuntu-16.04
+            compiler: g++-9
+          - os: ubuntu-16.04
+            compiler: clang++-8
+          - os: ubuntu-16.04
+            compiler: clang++-9
 
-                steps:
-                - uses: actions/checkout@v2
-                - name: Create build directory
-                  run: |
-                    mkdir build
-                - name: Run CMake configure
-                  env:
-                          CXX: ${{ matrix.compiler }}
-                  run: |
-                    cd build
-                    cmake ..
-                - name: Build
-                  run: |
-                    cd build
-                    make -j2
-                - name: Strip binary
-                  run: |
-                    cd build
-                    strip src/FIRESTARTER
-                - name: Test FIRESTARTER
-                  run: ./build/src/FIRESTARTER -t 1
-                - uses: actions/upload-artifact@v2
-                  if: matrix.compiler == 'clang++-10'
-                  with:
-                        name: FIRESTARTER-linux
-                        path: build/src/FIRESTARTER
-        build-windows:
-                strategy:
-                        fail-fast: false
-                        matrix:
-                                os: [windows-2019]
+    runs-on: ${{ matrix.os }}
 
-                runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      env:
+        CXX: ${{ matrix.compiler }}
+      run: |
+        cd build
+        cmake ..
+    - name: Build
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary
+      run: |
+        cd build
+        strip src/FIRESTARTER
+    - name: Test FIRESTARTER
+      run: ./build/src/FIRESTARTER -t 1
+    - uses: actions/upload-artifact@v2
+      if: matrix.compiler == 'clang++-10'
+      with:
+        name: FIRESTARTER-linux
+        path: build/src/FIRESTARTER
+  build-windows:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-2019]
 
-                steps:
-                - uses: actions/checkout@v2
-                - name: Install Mingw and CMake
-                  uses: crazy-max/ghaction-chocolatey@v1
-                  with:
-                          args: install mingw cmake
-                - name: Create build directory
-                  shell: pwsh
-                  run: |
-                    mkdir build
-                - name: Run CMake configure
-                  shell: pwsh
-                  run: |
-                    cd build
-                    cmake -G "MinGW Makefiles" ..
-                - name: Build
-                  shell: pwsh
-                  run: |
-                    cd build
-                    make -j2
-                - name: Strip binary
-                  run: |
-                    cd build
-                    strip src\FIRESTARTER.exe
-                - name: Test FIRESTARTER
-                  shell: pwsh
-                  run: .\build\src\FIRESTARTER.exe -t 1
-                - uses: actions/upload-artifact@v2
-                  with:
-                        name: FIRESTARTER-windows
-                        path: build\src\FIRESTARTER.exe
-        build-macos:
-                strategy:
-                        fail-fast: false
-                        matrix:
-                                os: [macos-11.0, macos-10.15]
+    runs-on: ${{ matrix.os }}
 
-                runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Install Mingw and CMake
+      uses: crazy-max/ghaction-chocolatey@v1
+      with:
+        args: install mingw cmake
+    - name: Create build directory
+      shell: pwsh
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      shell: pwsh
+      run: |
+        cd build
+        cmake -G "MinGW Makefiles" ..
+    - name: Build
+      shell: pwsh
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary
+      run: |
+        cd build
+        strip src\FIRESTARTER.exe
+    - name: Test FIRESTARTER
+      shell: pwsh
+      run: .\build\src\FIRESTARTER.exe -t 1
+    - uses: actions/upload-artifact@v2
+      with:
+        name: FIRESTARTER-windows
+        path: build\src\FIRESTARTER.exe
+  build-macos:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-11.0, macos-10.15]
 
-                steps:
-                - uses: actions/checkout@v2
-                - name: Install Homebrew dependencies
-                  run: |
-                    brew upgrade cmake
-                - name: Create build directory
-                  run: |
-                    mkdir build
-                - name: Run CMake configure
-                  run: |
-                    cd build
-                    cmake ..
-                - name: Build
-                  run: |
-                    cd build
-                    make -j2
-                - name: Strip binary
-                  run: |
-                    cd build
-                    strip src/FIRESTARTER
-                - name: Test FIRESTARTER
-                  run: |
-                    cd build
-                    ./src/FIRESTARTER -t 1
-                - uses: actions/upload-artifact@v2
-                  if: matrix.os == 'macos-11.0'
-                  with:
-                        name: FIRESTARTER-osx
-                        path: build/src/FIRESTARTER
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: Install Homebrew dependencies
+      run: |
+        brew upgrade cmake
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      run: |
+        cd build
+        cmake ..
+    - name: Build
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary
+      run: |
+        cd build
+        strip src/FIRESTARTER
+    - name: Test FIRESTARTER
+      run: |
+        cd build
+        ./src/FIRESTARTER -t 1
+    - uses: actions/upload-artifact@v2
+      if: matrix.os == 'macos-11.0'
+      with:
+        name: FIRESTARTER-osx
+        path: build/src/FIRESTARTER
