--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -103,7 +103,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       if: matrix.compiler == 'clang++-10' && matrix.CUDA != '0'
       with:
-        name: FIRESTARTER-linux
+        name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
         path: build/src/FIRESTARTER_CUDA
   build-windows:
     strategy:
