--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,14 @@ add_compile_definitions(_FIRESTARTER_BUILD_YEAR="${_FIRESTARTER_BUILD_YEAR}")
 include(cmake/GitSubmoduleUpdate.cmake)
 git_submodule_update()
 
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+else()
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2 -fdata-sections -ffunction-sections")
+endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-dead_strip")
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 else()
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
 endif()
