--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,16 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	endif()
 endif()
 
-option(FIRESTARTER_LINK_STATIC "Link FIRESTARTER as a static binary. Note, dlopen is not supported in static binaries." ON)
-option(FIRESTARTER_CUDA "Build FIRESTARTER with CUDA support. This will result in a shared linked binary." OFF)
-option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
+set(FIRESTARTER_BUILD_TYPE "FIRESTARTER" CACHE STRING "FIRESTARTER_BUILD_TYPE can be any of FIRESTARTER, FIRESTARTER_CUDA or FIRESTARTER_CUDA_ONLY.")
+set_property(CACHE FIRESTARTER_BUILD_TYPE PROPERTY STRINGS FIRESTARTER FIRESTARTER_CUDA FIRESTARTER_CUDA_ONLY)
+if (${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER")
+	option(FIRESTARTER_LINK_STATIC "Link FIRESTARTER as a static binary. Note, dlopen is not supported in static binaries. This option is not available on macOS or with CUDA enabled." ON)
+endif()
+if (${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER")
+	option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
+elseif(${FIRESTARTER_BUILD_TYPE} STREQUAL "FIRESTARTER_CUDA")
+	option(FIRESTARTER_BUILD_HWLOC "Build hwloc dependency." ON)
+endif()
 option(FIRESTARTER_THREAD_AFFINITY "Enable FIRESTARTER to set affinity to hardware threads." ON)
 
 if(NOT DEFINED ASMJIT_STATIC)
