--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -196,7 +196,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11.0, macos-10.15]
+        os: [macos-10.15]
+        #os: [macos-11.0, macos-10.15]
 
     runs-on: ${{ matrix.os }}
 
@@ -295,16 +296,16 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x ../FIRESTARTER_CUDA_11.0
     # OSX 11.0
-    - name: Retrieve FIRESTARTER-macOS_11.0
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER-macOS_11.0
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER ../FIRESTARTER-macOS_11.0
-        rm -rf FIRESTARTER
-        chmod +x ../FIRESTARTER-macOS_11.0
+    #- name: Retrieve FIRESTARTER-macOS_11.0
+    #  uses: actions/download-artifact@v2
+    #  with:
+    #    name: FIRESTARTER-macOS_11.0
+    #    path: FIRESTARTER
+    #- name: Move binary to right directory
+    #  run: |
+    #    mv FIRESTARTER/FIRESTARTER ../FIRESTARTER-macOS_11.0
+    #    rm -rf FIRESTARTER
+    #    chmod +x ../FIRESTARTER-macOS_11.0
     # OSX 10.15
     - name: Retrieve FIRESTARTER-macOS_10.15
       uses: actions/download-artifact@v2
